2011-05-23  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_grammar.y (%): Prototype yylex().
	* libdtrace/dt_impl.h (yytext): Make it a pointer, to allow flex
	to parse tokens of unbounded length efficiently.
	* libdtrace/makefile (dt_lex.c): No longer run flex in traditional
	mode. Use -o rather than redirecting output.
	* libdtrace/dt_lex.l: Turn on automatic yylineno updating.
	Push the ^ in RGX_INTERP and RGX_CTL into the rules where they are
	expanded, as POSIX mode wraps all variable expansions in (), and ^
	is not meaningful inside ().
	Fix dangerous trailing context: this has no meaningful
	semantics and is undefined per POSIX.

	* demo/dtrace/end.d: Test skipping of interpreter lines. (This
	is the only rule modified above which does not yield an error
	if matched.)

2011-05-23  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Support regression tests via multiple dtrace build
	directories. Use case rather than if/elif tree, and echo rather
	than if. Post-process regtest output to conceal variable pointer
	addresses.

	* libdtrace/dt_dis.c (dt_dis): Print pointers via %p, not 0x%p:
	%p under glibc, as on most systems, already includes an 0x.

	* .gitignore: New.

2011-05-23  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_open.c (_dtrace_libdir): Use #define to decide value.
	* libdtrace/makefile (CPPFLAGS): Set it.

	* libdtrace/makefile (LIB): drti.o is not part of libdtrace.a...
	* libdtrace/makefile (DRTI_OBJ): ... but is independent, and goes
	in the build dir, like the library.
	* libdtrace/makefile (all): Build it.
	* libdtrace/drti-vers: New version script, for use by `dtrace -G'.
	* libdtrace/makefile (install): Install it. Use mkdir -p.

	* libdtrace/dt_link.c (dtrace_program_link): Link using drti-vers
	as a version script to enforce locality. Don't use the 64/
	subdirectory.

2011-05-23 Shujing Zhao  <pearly.zhao@oracle.com>

	* libport/proc_name.c: Remove.
	* libport/makefile: Remove proc_name.o from the lib.